[gd_scene load_steps=6 format=3 uid="uid://4wn416bav7iu"]

[ext_resource type="Script" path="res://TankEnemy.gd" id="1_hmxt1"]
[ext_resource type="PackedScene" uid="uid://w460tb4vfh2q" path="res://models/tank.gltf" id="2_nb3b3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mbvd8"]
size = Vector3(1.3, 1, 2)

[sub_resource type="SphereShape3D" id="SphereShape3D_ln52f"]
radius = 15.0

[sub_resource type="BoxShape3D" id="BoxShape3D_l4mr4"]
size = Vector3(1.3, 0.9, 1.8)

[node name="TankEnemy" type="CharacterBody3D"]
script = ExtResource("1_hmxt1")
speed = 3.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.498412, 0)
shape = SubResource("BoxShape3D_mbvd8")

[node name="playerDetector" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="playerDetector"]
shape = SubResource("SphereShape3D_ln52f")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="Hurtbox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.490194, -0.00488651)
shape = SubResource("BoxShape3D_l4mr4")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="blockbench_export" parent="." instance=ExtResource("2_nb3b3")]
transform = Transform3D(2000, 0, 0, 0, 2000, 0, 0, 0, 2000, 0, 0, 0)

[node name="gun" parent="blockbench_export/Node" index="3"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 2.72599e-21, 0.000357143, -0.000404762)

[node name="EndOfGun" type="Marker3D" parent="blockbench_export/Node/gun" index="0"]
transform = Transform3D(0.000333333, 0, 0, 0, 0, -0.000333333, 0, 0.000333333, 0, -2.72599e-21, 0.000174176, -4.76392e-06)

[connection signal="body_entered" from="playerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="playerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="blockbench_export"]
